# vapt-android-lib

./: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md
app/src/main/java/com/scottyab/rootbeer/sample/: CheckForRootWorker.kt  MainActivity.kt  PrintDisable.kt  RootSampleApp.kt  SilentPrintStream.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
rootbeerlib/: build.gradle.kts  gradle.properties
rootbeerlib/src/main/: AndroidManifest.xml
rootbeerlib/src/main/cpp/: CMakeLists.txt  EmulatorDetection.cpp  EmulatorDetection.h  toolChecker.cpp  toolChecker.h
rootbeerlib/src/main/cpp/emu/: EmulatorData.h  FileHelper.h
rootbeerlib/src/main/java/com/iw/mintroot/: Const.java  RootBeer.java  RootBeerNative.java
rootbeerlib/src/main/java/com/iw/mintroot/util/: QLog.java
rootbeerlib/src/main/java/com/rootchecker/service/: Const.java  RootBeer.java  RootBeerNative.java
rootbeerlib/src/main/java/com/rootchecker/service/util/: QLog.java
rootbeerlib/src/test/java/com/iw/mintroot/: RootBeerTest.java
rootbeerlib/src/test/java/com/rootchecker/service/: RootBeerTest.java
